--- a/views/books.pug
+++ b/views/books.pug
@@ -1,5 +1,22 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{books[1].id}
+    h1 Books
+    p
+        a.button(href= 'new_book.html') Create New Book 
+    
+    table 
+        thead 
+            tr 
+                th Title 
+                th Author 
+                th Genre 
+                th Year
+        tbody 
+        each book in books
+            tr
+                td
+                    a(href= 'book_detail.html')= book.title
+                td= book.author
+                td= book.genre 
+                td= book.year
