--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title Books
     link(rel='stylesheet', href='../static/stylesheets/style.css')
   body
     block content
