--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1 New Book 
-    form(action="/books/new", method="post")
+    form(action="/books/new" method="post" onsubmit="return alert('New book added!');")
         p 
             label(for="title") Title
             input(name="title" type="text" id="title")
