--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -2,7 +2,13 @@ extends layout
 
 block content
     h1 Update Book 
+
     form(method="post" action=`/books/${book.id}`)
+        if error 
+            h2.error Oooops! 
+            ul.error
+                each item in error.errors 
+                    li= item.message
         p 
             label(for="title") Title
             input(name="title" type="text" id="title" value=book.title)
