--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,15 @@ a.button, input[type=submit] {
   cursor: pointer;
 }
 
+#searchBtn {
+  margin-left: 0px;
+  padding: 12px;
+}
+
+#searchInput {
+  margin-left: 0px;
+}
+
 form a.button, input[type=submit] {
   margin-left: 140px;
   transition: 0.4s;
