Add basic functionality to Search function

--- a/views/index.pug
+++ b/views/index.pug
@@ -27,3 +27,5 @@ block content
                 td= book.author
                 td= book.genre 
                 td= book.year
+    p 
+        a.button(href="/books") Clear Search
