--- a/views/index.pug
+++ b/views/index.pug
@@ -7,10 +7,15 @@ block content
 
     br 
 
-    form(action=`/books` method="post")
+    form(action=`/books` method="get")
         p
             input(name="search" type="text" id="searchInput")
             input(type="submit" value="Search" id="searchBtn")
+            br
+            - var n = 0;
+            while n < books.count
+                - n+=5
+                input(name="page" type="submit" value=n/5 id="pageBtn")
 
     table 
         thead 
@@ -28,13 +33,13 @@ block content
                 td= book.author
                 td= book.genre 
                 td= book.year
-    br
-    p
-        - var n = 0;
-        while n < books.count
-            - n+=5
-            form(action=`/books` method="get")
-                input(type="submit" value=n/5 id="pageBtn" name="page")
+    //- br
+    //- p
+    //-     - var n = 0;
+    //-     while n < books.count
+    //-         - n+=5
+    //-         form(action=`/books` method="get")
+    //-             input(name="page" type="submit" value=n/5 id="pageBtn")
     br
     p 
         a.button(href="/books") Clear Search
