Removes unused code

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
 
     br 
     if(searchVal)
-        h3= `Searching for: ${searchVal}`
+        h3= `Searching for: '${searchVal}'`
 
     form(action=`/books` method="get")
         p
